@@ -1,3 +1,4 @@
+	* fixed inconsistency when creating torrents with symlinks
 	* properly detect windows version to initialize half-open connection limit
 	* fixed bug in url encoder where $ would not be encoded
 
